style part done and add keyframe

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital-Clock</title>
     <!-- Link-CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
     <!-- Simple Clock -->
@@ -39,6 +39,6 @@
     </div>
 
     <!-- Link-script -->
-     <script src="main.js"></script>
+     <script src="src/main.js"></script>
 </body>
 </html>
